ссылки между страницами

--- a/add/index.html
+++ b/add/index.html
@@ -16,6 +16,7 @@
         <h3 class="header">Описание задачи</h3>
         <textarea class="desc-task" id="desc-task" placeholder="Введите описание задачи"></textarea>
         <button id="add" class="btn-add-task">Добавить задачу</button>
+        <a href="/" class="exit">x</a>
     </div>
 </body>
 </html>
