--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </button>
             </li>
         </ul>
-        <button id="new" class="btn-new-task">+</button>
+        <a href="/add/" id="new" class="btn-new-task">+</a>
     </div>
 </body>
 </html>
