--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <title>To Do List</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="/js/main.js"></script>
 </head>
 <body>
     <div class="wrapper">
         <h1 class="header">Список дел</h1>
-        <ul class="list">
-            <li class="list-item">
-                <input type="checkbox" class="custom-checkbox" id="checkbox-1" name="checkbox-1" value="yes"/>
+        <ul class="list" id="task-list">
+            <!-- <li class="list-item">
+                <input type="checkbox" class="custom-checkbox" id="checkbox-1" name="checkbox-1"/>
                 <label for="checkbox-1">Выучить HTML</label>
                 <button class="btm-del">
                     <img src="img/trash.svg" alt="Удалить">
@@ -22,29 +23,10 @@
                 <button class="btm-edit">
                     <img src="img/edit.svg" alt="Редактировать">
                 </button>
-            </li>
-            <li class="list-item">
-                <input type="checkbox" class="custom-checkbox" id="checkbox-2" name="checkbox-2" value="yes"/>
-                <label for="checkbox-2">Выучить CSS</label>
-                <button class="btm-del">
-                    <img src="img/trash.svg" alt="Удалить">
-                </button>
-                <button class="btm-edit">
-                    <img src="img/edit.svg" alt="Редактировать">
-                </button>
-            </li>
-            <li class="list-item">
-                <input type="checkbox" class="custom-checkbox" id="checkbox-3" name="checkbox-3" value="yes"/>
-                <label for="checkbox-3">Выучить JavaScript</label>
-                <button class="btm-del">
-                    <img src="img/trash.svg" alt="Удалить">
-                </button>
-                <button class="btm-edit">
-                    <img src="img/edit.svg" alt="Редактировать">
-                </button>
-            </li>
+            </li> -->
         </ul>
         <a href="/add/" id="new" class="btn-new-task">+</a>
     </div>
+    
 </body>
 </html>
