Оживили to do list

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <!-- <li class="list-item">
                 <input type="checkbox" class="custom-checkbox" id="checkbox-1" name="checkbox-1"/>
                 <label for="checkbox-1">Выучить HTML</label>
-                <button class="btm-del">
+                <button class="btn-del">
                     <img src="img/trash.svg" alt="Удалить">
                 </button>
-                <button class="btm-edit">
+                <button class="btn-edit">
                     <img src="img/edit.svg" alt="Редактировать">
                 </button>
             </li> -->
