--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="style.css">
     <script defer src="/js/main.js"></script>
 </head>
-<body>
+<body class="light-theme">
+    <button class="btn-theme" id="btn-theme"></button>
     <div class="wrapper">
         <h1 class="header">Список дел</h1>
         <ul class="list" id="task-list">
